--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ markdown: redcarpet
 pygments: true
 
 title_tag_text: COMP435p, Tutorial 7
-h1_tag_text: COMP435p - Tutorial 7
+h1_tag_text: Tutorial 7
